# ChangeLog for net-im/psi-otr
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Oct 2010; Rion <rion4ik@notagmail.com> +psi-otr-0.6.ebuild,
  +metadata.xml:
  initial import
