@@ -1,4 +1,4 @@
 DIST psi-otr-0.6.tar.gz 22633 RMD160 0cb93c80600467567e7527f44bd90dd9bc26ffff SHA1 f3ed35570db32c2ffdf2303dfc83bdf75a279cc9 SHA256 fc95a452c0fa8a2f222a55108eebf178d1925c198e196cc29755854047ee191c
-EBUILD psi-otr-0.6.ebuild 590 RMD160 d473bf454990722deeacc7f0c9ab6c1bb3652783 SHA1 a2737f1ca6d4e408996ca456787555d2cdb543df SHA256 f2c650d2dc11d7304ba522749ffa5dab8491face8cc580a18fb25129eaa84526
-MISC ChangeLog 215 RMD160 d03d13def7b3df569f2d0c434e183ce23c11c003 SHA1 b486aa54d1306dbf71031b4dcd96f2d7cbfd0b96 SHA256 9aa207e960baf94cb33b8946f5c7c6b6764de14ec60855a6a9bd2c6eeb1be589
+EBUILD psi-otr-0.6.ebuild 419 RMD160 25a248ce3a90621d65f8fa780935d02c56fb1351 SHA1 82fe508cf21dd22323e0faea9cfc3adc59b8b4ff SHA256 f7d58fc0cbe9564b6c05b9c0e90721e2e0185a5c17921d67de70165c55be462b
+MISC ChangeLog 314 RMD160 ebcb12c4c39331e311d1f4a512138de148c8b090 SHA1 d41148ac0f086166cfc46871cf7cc86940124988 SHA256 32cd7f8da58a829a7ffb8a6c8c63ed15b0b8f74eec8937964e7829feee1f2429
 MISC metadata.xml 407 RMD160 27e36c41480f4ba70d888c86e9fa9455beca0e85 SHA1 5a7484dcd888ef7a9cd093a418f0bd3b654e00cf SHA256 83a04cb9af09fb30de8173af270749e8c52c118a5d8491874c838e9276b15371
