@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Oct 2010; Nikoli <nikoli@lavabit.com> psi-otr-0.6.ebuild:
+  migrate to psiplus-plugin eclass
+
   27 Oct 2010; Rion <rion4ik@notagmail.com> +psi-otr-0.6.ebuild,
   +metadata.xml:
   initial import
